echo-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app-svc
  namespace: deployment-project
spec:
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
