destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-destination-rule
  namespace: deployment-project
spec:
  host: echo-app-svc
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
