virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-app-vs
  namespace: deployment-project
spec:
  hosts:
  - "*" 
  gateways:
  - app-gateway #Link to the gateway
  http:
  - route:
    - destination:
        host: echo-app-svc
        subset: blue
      weight: 0
    - destination:
        host: echo-app-svc
        subset: green
      weight: 100
